examples/kubernetes/envoy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  labels:
    app: authorino
    svc: envoy
spec:
  selector:
    matchLabels:
      app: authorino
      svc: envoy
  template:
    metadata:
      labels:
        app: authorino
        svc: envoy
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.14-latest
          command: ["/usr/local/bin/envoy"]
          args:
            - --config-path /usr/local/etc/envoy/envoy.yaml
            - --service-cluster front-proxy
            - --log-level info
            - --component-log-level filter:trace,http:debug,router:debug
          env:
            - name: NGINX_HTTP_PORT_NUMBER
              value: "8000"
          ports:
            - name: web
              containerPort: 8000
            - name: admin
              containerPort: 8001
          volumeMounts:
            - name: config
              mountPath: /usr/local/etc/envoy
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: envoy
            items:
              - key: envoy.yaml
                path: envoy.yaml
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: envoy
  labels:
    app: authorino
spec:
  selector:
    app: authorino
    svc: envoy
  ports:
    - name: web
      port: 8000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
    - host: "echo-api-authorino.127.0.0.1.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: envoy
                port:
                  number: 8000
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy
  labels:
    app: authorino
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 8000
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: local
              route_config:
                name: local_route
                virtual_hosts:
                - name: static_response
                  domains: ['*']
                  routes:
                  - match:
                      prefix: "/direct"
                    direct_response:
                      status: 200
                      body:
                        inline_string: 'direct'
                  - match: { prefix: / }
                    route:
                      cluster: echo-api
              http_filters:
              - name: envoy.filters.http.ext_authz
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                  failure_mode_allow: false
                  include_peer_certificate: true
                  grpc_service:
                    envoy_grpc:
                      cluster_name: external_auth
              - name: envoy.filters.http.router
                typed_config: {}
      clusters:
      - name: external_auth
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        http2_protocol_options: {}
        load_assignment:
          cluster_name: external_auth
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: authorino-authorization
                    port_value: 50051
      - name: echo-api
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: echo-api
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: echo-api
                    port_value: 3000
    admin:
      access_log_path: "/tmp/admin_access.log"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
